Add loading bar feature
Displays loading time for weather updates to show

--- a/index.html
+++ b/index.html
@@ -46,4 +46,11 @@
         </div>
       </header>
     </main>
+    <div class="load hidden">
+      <div class="load__container">
+      <h2 class="load__label load__label--title">Loading...</h2>
+      <progress class="load__bar" value="1" max="100"></progress>
+      <p class="load__label load__label--desc"></p>
+      </div>
+    </div>
 </html>
