--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       type="text/css"
       href="./assets/stylesheets/style.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="./app.js"></script>
     <title>Weather App</title>
   </head>
@@ -33,34 +37,32 @@
         </button>
       </nav>
     </header>
+
     <main class="main">
       <div class="main__content content">
         <div
           class="content__container content__container--hero container hidden"
         >
-          <h1 class="container__label container__label--title"></h1>
+          <h1
+            class="container__label container__label--title container__label"
+          ></h1>
+
           <div class="container__item container__item--0 item">
             <img class="item__img" />
-            <h2 class="item__label item__label--desc"></h2>
-          </div>
-          <div class="container__item container__item--1 item">
-            <abbr
-              class="item__label item__label--temp"
+            <p
+              class="item__label item__label--unit item__label--unit--temp"
               title="Temperature"
-            ></abbr>
-            <abbr
-              class="item__label item__label--humidity"
-              title="Humidity"
-            ></abbr>
+            ></p>
+          </div>
+
+          <div class="container__item container__item--1 item">
+            <p
+              class="item__label item__label--unit item__label--unit--speed"
+              title="Windspeed"
+            ></p>
           </div>
         </div>
       </div>
     </main>
-    <div class="modal">
-      <button class="modal__btn--close btn">&times;</button>
-      <label class="modal__label">API Key</label>
-      <input class="modal__input modal__input--key" type="text" />
-    </div>
-    <div class="overlay"></div>
   </body>
 </html>
