--- a/index.html
+++ b/index.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/stylesheets/reset.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/stylesheets/style.css"
-    />
+    <link rel="stylesheet" type="text/css" href="./src/stylesheets/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./src/stylesheets/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <script defer src="./app.js"></script>
+    <script defer type="module" src="./src/app.js"></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -29,7 +21,7 @@
           title="Link to Designer"
           target="_blank"
         >
-          <img class="nav__link-img" src="./assets/images/weather_icon.png" />
+          <img class="nav__link-img" src="./src/images/weather_icon.png" />
         </a>
         <h1 class="nav__label nav__label--title">Weather</h1>
         <button class="nav__btn nav__btn--update btn">
